kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restserver
  template:
    metadata:
      labels:
        app: restserver
    spec:
      containers:
        - name: restserver
          image: docspell/restserver
          ports:
            - containerPort: 7880
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.5'
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joex
  template:
    metadata:
      labels:
        app: joex
    spec:
      containers:
        - name: joex
          image: docspell/joex
          ports:
            - containerPort: 7878
          args:
            - "-J-Xmx3G"
          resources:
            limits:
              cpu: '1'
              memory: 3Gi
            requests:
              cpu: '0.5'
              memory: 1.5Gi
