kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell-ingress
spec:
  rules:
    - host: docspell.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restserver
                port:
                  name: http
